--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 # I  contributed to the hbnb project in this repository 
 
 Yonas Leykun (yonasleykun27@gmail.com)
+Damilola Ohunbayo (damilolaogunbayo323@gmail.com)
